[package]
name = "easy-config-store"
version = "0.3.1"
edition = "2024"
authors = ["Gustavo Widman <admin@r3dlust.com>"]
license = "MIT"
description = "A simple, flexible configuration management library for Rust that supports multiple serialization formats and both synchronous and asynchronous operations."
repository = "https://github.com/GustavoWidman/easy-config-store"
homepage = "https://github.com/GustavoWidman/easy-config-store"

[workspace]
members = ["examples/*"]

[dependencies]
toml = { version = "0.8.20", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
tokio = { version = "1.44.1", features = ["fs"], optional = true }
eyre = "0.6.12"

[features]
default = ["toml"]
tokio = ["dep:tokio"]
toml = ["dep:toml"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }
easy-config-store = { path = ".", default-features = false, features = [
  "toml",
  "tokio",
] }
